# cli_for_ds_masterclass

./: Makefile  README.md  example.env  pyproject.toml
src/: download_rita.sh  gen_random_data.sh  placeholders_templates.sh  students.py
src/bot/: app.py  config.py  predicting.py  training.py
src/bot/data/: conversations.json
src/bot/models/: request.py  response.py
src/rita/: download_rita.sh  unzip_rita.sh
